// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|VerticalTabs Active tiers 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-active={true}
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <button
          data-css-lqdu28=""
          onClick={[Function]}
        >
          <div
            data-active={true}
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            Tier 1 active
          </span>
        </button>
      </div>
    </li>
    <li>
      <div
        data-active={true}
        data-css-1b8plv5=""
        data-css-1uz4955=""
      >
        <button
          onClick={[Function]}
        >
          <span
            data-css-yw1xlf=""
          >
            Tier 2 active
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs CollapsibleGroup 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <div
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            Reports home
          </span>
        </span>
      </div>
    </li>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Collapse"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-yw1xlf=""
          >
            Operational Reports
          </span>
          <div
            data-css-12f5sv2=""
            data-css-1rikgj2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-1y8i23u=""
      >
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Work log
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Project timeline
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Leaderboard
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Retrospective
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Snapshot
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Daily update
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Spot check
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Expand"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-yw1xlf=""
          >
            Reviews & Collaboration
          </span>
          <div
            data-css-12f5sv2=""
            data-css-1gtb6c4=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-1y8i23u=""
      />
    </div>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Expand"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-yw1xlf=""
          >
            Fundamentals
          </span>
          <div
            data-css-12f5sv2=""
            data-css-1gtb6c4=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-1y8i23u=""
      />
    </div>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs Group 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-dk3o27=""
      >
        <span
          data-css-yw1xlf=""
        >
          Introduction
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <span
                data-css-yw1xlf=""
              >
                Install
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <span
                data-css-yw1xlf=""
              >
                Design assets
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <span
                data-css-yw1xlf=""
              >
                Contribute
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <span
                data-css-yw1xlf=""
              >
                Roadmap
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
    <hr
      data-css-1luso1=""
    />
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-dk3o27=""
      >
        <span
          data-css-yw1xlf=""
        >
          Foundations
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Color
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Typography
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Spacing
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Iconography
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-yw1xlf=""
              >
                Voice & Tone
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
    <hr
      data-css-1luso1=""
    />
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-dk3o27=""
      >
        <span
          data-css-yw1xlf=""
        >
          Components
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-active={true}
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <span
                data-css-yw1xlf=""
              >
                Avatar
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-active={true}
                data-css-1b8plv5=""
                data-css-1uz4955=""
              >
                <span>
                  <span
                    data-css-yw1xlf=""
                  >
                    Prop types
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1b8plv5=""
                data-css-1uz4955=""
              >
                <span>
                  <span
                    data-css-yw1xlf=""
                  >
                    Guidelines
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <span
                data-css-yw1xlf=""
              >
                Button
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <span
                data-css-yw1xlf=""
              >
                Badge
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-lqdu28=""
            >
              <span
                data-css-yw1xlf=""
              >
                Breadcrumb
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs Href changes tier tag to link 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <a
          data-css-lqdu28=""
          href=" "
        >
          <span
            data-css-yw1xlf=""
          >
            Tier 1 link
          </span>
        </a>
      </div>
    </li>
    <li>
      <div
        data-css-1b8plv5=""
        data-css-1uz4955=""
      >
        <a
          href=" "
        >
          <span
            data-css-yw1xlf=""
          >
            Tier 2 link
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs Long text 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-dk3o27=""
      >
        <span
          data-css-yw1xlf=""
        >
          The technology skills platform
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      />
    </li>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Expand"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-yw1xlf=""
          >
            The technology skills platform
          </span>
          <div
            data-css-12f5sv2=""
            data-css-1gtb6c4=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-1y8i23u=""
      />
    </div>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <span
            data-css-yw1xlf=""
          >
            The technology skills platform
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-1b8plv5=""
        data-css-1uz4955=""
      >
        <span>
          <span
            data-css-yw1xlf=""
          >
            The technology skills platform
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs No Group 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <span
            data-css-yw1xlf=""
          >
            Dashboard
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <span
            data-css-yw1xlf=""
          >
            Account
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-active={true}
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <div
            data-active={true}
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            People
          </span>
        </span>
      </div>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-active={true}
            data-css-1b8plv5=""
            data-css-1uz4955=""
          >
            <span>
              <span
                data-css-yw1xlf=""
              >
                Organization
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1b8plv5=""
            data-css-1uz4955=""
          >
            <span>
              <span
                data-css-yw1xlf=""
              >
                Admins
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1b8plv5=""
            data-css-1uz4955=""
          >
            <span>
              <span
                data-css-yw1xlf=""
              >
                Managers
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1b8plv5=""
            data-css-1uz4955=""
          >
            <span>
              <span
                data-css-yw1xlf=""
              >
                Unassigned users
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <div
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            Pending invites
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <div
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            Analytics
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <div
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            Log
          </span>
        </span>
      </div>
    </li>
    <hr
      data-css-1luso1=""
    />
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <div
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            Item label
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <div
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            Item label
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs onClick no href changes tier tag to button 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <button
          data-css-lqdu28=""
          onClick={[Function]}
        >
          <span
            data-css-yw1xlf=""
          >
            Tier 1 button
          </span>
        </button>
      </div>
    </li>
    <li>
      <div
        data-css-1b8plv5=""
        data-css-1uz4955=""
      >
        <button
          onClick={[Function]}
        >
          <span
            data-css-yw1xlf=""
          >
            Tier 2 button
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier1 Item active 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-active={true}
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <a
          data-css-lqdu28=""
          href="#"
        >
          <div
            data-active={true}
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            header here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier1 Item collapsible 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-lqdu28=""
        >
          <div
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            header here
          </span>
        </span>
      </div>
      <ul
        data-css-gkw1j5=""
      >
        <div
          data-css-120tbc1=""
        />
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier1 Item link 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <a
          data-css-lqdu28=""
          href="#"
        >
          <div
            data-css-1kqp8s2=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-yw1xlf=""
          >
            header here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier2 Item active 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-active={true}
        data-css-1b8plv5=""
        data-css-1uz4955=""
      >
        <a
          href="#"
        >
          <span
            data-css-yw1xlf=""
          >
            header here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier2 Item link 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-1b8plv5=""
        data-css-1uz4955=""
      >
        <a
          href="#"
        >
          <span
            data-css-yw1xlf=""
          >
            header here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/examples FLOW 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": "100%",
      "justifyContent": "start",
      "width": "100%",
    }
  }
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "width": 72,
      }
    }
  >
    <ul
      data-css-nqd4p3=""
    >
      <li
        data-css-1268me8=""
      >
        <ul
          data-css-gkw1j5=""
        >
          <li>
            <div
              data-css-13xqjhl=""
              data-css-1b8plv5=""
            >
              <span
                data-css-lqdu28=""
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-otejxm=""
                >
                  <svg
                    fill="none"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-8crn8x=""
                >
                  Reports Home
                </span>
              </span>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-13xqjhl=""
              data-css-1b8plv5=""
            >
              <span
                data-css-lqdu28=""
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-otejxm=""
                >
                  <svg
                    fill="none"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-8crn8x=""
                >
                  Operational Reports
                </span>
              </span>
            </div>
            <ul
              data-css-gkw1j5=""
            >
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Work Log
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Project Timeline
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Leaderboard
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Snapshot
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Daily Updates
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Spot Check
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              data-css-13xqjhl=""
              data-css-1b8plv5=""
            >
              <span
                data-css-lqdu28=""
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-otejxm=""
                >
                  <svg
                    fill="none"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-8crn8x=""
                >
                  Review & Collaborate
                </span>
              </span>
            </div>
            <ul
              data-css-gkw1j5=""
            >
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Review Workflow
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Review Collaboration
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-active={true}
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      PR Resolution
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Knowledge Sharing
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Player Card
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              data-css-13xqjhl=""
              data-css-1b8plv5=""
            >
              <span
                data-css-lqdu28=""
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-otejxm=""
                >
                  <svg
                    fill="none"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-8crn8x=""
                >
                  Delivery
                </span>
              </span>
            </div>
            <ul
              data-css-gkw1j5=""
            >
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Retrospective
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              data-css-13xqjhl=""
              data-css-1b8plv5=""
            >
              <span
                data-css-lqdu28=""
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-otejxm=""
                >
                  <svg
                    fill="none"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-8crn8x=""
                >
                  Fundamentals
                </span>
              </span>
            </div>
            <ul
              data-css-gkw1j5=""
            >
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Code
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Submit
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1b8plv5=""
                  data-css-1uz4955=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-8crn8x=""
                    >
                      Review
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
